// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate loader options should throw an error on the "generator" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be a non-empty array.
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "[{"preset":"webp","filename":true}]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator[0].filename should be one of these:
   non-empty string | function
   -> Allows to set the filename for the minimized asset.
   Details:
    * options.generator[0].filename should be a non-empty string.
    * options.generator[0].filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "generator" option with "[{"preset":"webp","filter":true}]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator[0].filter should be an instance of function.
   -> Allows filtering of images."
`;

exports[`validate loader options should throw an error on the "generator" option with "[{"preset":"webp"}]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator[0] misses the property 'implementation'. Should be:
   function
   -> Implementation of the generator function."
`;

exports[`validate loader options should throw an error on the "generator" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation, preset, type?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation, preset, type?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation, preset, type?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "generator" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.generator should be an array:
   [object { implementation, preset, type?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
   -> Allows you to setup the generator function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#generator"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be a non-empty array."
`;

exports[`validate loader options should throw an error on the "minimizer" option with "{"filename":true}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item) | object { implementation?, options?, filter?, filename? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer.filename should be one of these:
      non-empty string | function
      -> Allows to set the filename for the minimized asset.
      Details:
       * options.minimizer.filename should be a non-empty string.
       * options.minimizer.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "minimizer" option with "{"filter":true}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer.filter should be an instance of function.
   -> Allows filtering of images."
`;

exports[`validate loader options should throw an error on the "minimizer" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item) | object { implementation?, options?, filter?, filename? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options?, filter?, filename? }"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item) | object { implementation?, options?, filter?, filename? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options?, filter?, filename? }"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item) | object { implementation?, options?, filter?, filename? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options?, filter?, filename? }"
`;

exports[`validate loader options should throw an error on the "minimizer" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizer should be one of these:
   [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item) | object { implementation?, options?, filter?, filename? }
   -> Allows you to setup the minimizer function and options.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizer
   Details:
    * options.minimizer should be an array:
      [object { implementation?, options?, filter?, filename? }, ...] (should not have fewer than 1 item)
    * options.minimizer should be an object:
      object { implementation?, options?, filter?, filename? }"
`;

exports[`validate loader options should throw an error on the "severityError" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   \\"off\\" | \\"warning\\" | \\"error\\"
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror"
`;

exports[`validate loader options should throw an error on the "severityError" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   \\"off\\" | \\"warning\\" | \\"error\\"
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror"
`;

exports[`validate loader options should throw an error on the "severityError" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   \\"off\\" | \\"warning\\" | \\"error\\"
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror"
`;

exports[`validate loader options should throw an error on the "severityError" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   \\"off\\" | \\"warning\\" | \\"error\\"
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror"
`;

exports[`validate loader options should throw an error on the "severityError" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be one of these:
   \\"off\\" | \\"warning\\" | \\"error\\"
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror"
`;

exports[`validate loader options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizer?, generator?, severityError? }"
`;
